nginx-app/nginx-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80 # pod ports
